<resources>
    <string name="app_name">TestBerkatSoft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_detail"><![CDATA[See Detail >>]]></string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="up_coming">Up Coming</string>
    <string name="download">download</string>
    <string name="share">share</string>
    <string name="overview">Overview</string>
    <string name="add_list">add list</string>
</resources>